# Alphahunt

./: pyproject.toml
src/training/: requirements.txt
