[project]
name = "alphahunt"
version = "0.1.0"
description = "Training threat hunting agents with realistic synthetic data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.9.0",
    "click==8.1.7",
    "datasets==2.20.0",
    "fastapi==0.115.6",
    "flaml==2.1.2",
    "flask==2.1.3",
    "gymnasium>=1.2.1",
    "highway-env==1.8.2",
    "httpx==0.27.0",
    "ipython==8.26.0",
    "jupyter-book==1.0.2",
    "matplotlib==3.9.0",
    "ml-dtypes==0.4.0",
    "numpy>=1.26.0",
    "openai==1.35.9",
    "pandas==2.2.2",
    "plotly==5.15.0",
    "pydantic==2.7.4",
    "pytest==8.3.4",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.1",
    "ray==2.31.0",
    "requests==2.32.4",
    "rich==13.7.1",
    "ruff>=0.14.2",
    "scikit-learn==1.5.1",
    "scipy==1.14.0",
    "spacy==3.7.5",
    "textgrad==0.1.4",
    "tiktoken==0.7.0",
    "torch==2.3.1",
    "torchaudio==2.3.1",
    "torchvision==0.18.1",
    "tqdm==4.66.4",
    "uvicorn==0.32.1",
    "wandb==0.18.3",
    "polars",
    "faker>=37.11.0",
]
[tool.uv.pip]
prerelease = "allow"
